--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,10 @@ h3{
     text-align: right;
 }
 h2 {
-    color:#ddd;
-    text-align: left;
+    margin: 0;
+    transform: rotate(-45deg);
+    transition: transform 0.5s;
+    text-shadow: 0 0 5px #01579b;
 }
 header {
     height: 100px;
@@ -53,5 +55,6 @@ article img {
 article p {
 	font-size: 16px;
 }
+
 
 
